# 26s-w2-c3-09

./: .env.docker.example  .env.example  .gitignore  AGENTS.md  AI_implement_rule.txt  B_PLAN.md  B_PROCESS.md  CHAT_SYNC_AND_MOBILE_TODO_FOR_CLAUDE.md  CODEOWNERS  HISTORY.md  HOUSEMOUSE_PLAN.md  IMPLEMENTATION_PLAN.md  MOUSEKEEPER_PLAN.md  README.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.claude/: launch.json
.github/workflows/: ci.yml
7/: 12_plan.md
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/.claude/: launch.json
apps/desktop/src/: AppShell.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  INTEGRATION.md  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: character-overlay.json  default.json  house-overlay.json
apps/desktop/src-tauri/src/: agent.rs  agent_tool_processor.rs  auto_cleanup_processor.rs  auto_proposal.rs  background.rs  cleanliness.rs  command_processor.rs  document_extraction.rs  execution_processor.rs  file_browse_processor.rs  file_transfer_processor.rs  lib.rs  main.rs  outbox_processor.rs  overlay.rs  smart_cache_crypto.rs  smart_cache_processor.rs  tray.rs  watcher.rs  watcher_lifecycle.rs  work_limiter.rs
apps/desktop/src-tauri/src/commands/: agent.rs  background.rs  file_engine.rs  mod.rs  overlay.rs  permissions.rs  smart_cache.rs  watcher.rs
apps/desktop/src-tauri/src/storage/: agent_sync.rs  auto_approval.rs  cleanliness_snapshots.rs  managed_roots.rs  mod.rs  outbox.rs  smart_cache.rs  watchers.rs
apps/mobile/: pubspec.yaml
apps/mobile/lib/: app.dart  main.dart
apps/mobile/test/: active_connection_list_test.dart  app_config_test.dart  character_state_test.dart  chat_page_test.dart  cheese_loading_test.dart  cleanliness_card_test.dart  connection_gate_controller_test.dart  connection_lifecycle_test.dart  display_cache_test.dart  feeding_interaction_test.dart  file_browse_state_test.dart  file_command_page_test.dart  files_search_widget_test.dart  home_background_mapping_test.dart  home_bottom_navigation_test.dart  home_reconcile_loop_test.dart  home_summary_test.dart  mini_games_test.dart  (+14 more)
apps/server/: drizzle.config.ts  package.json
apps/worker/: package.json  tsconfig.json
docs/: AWS_EC2_DEPLOYMENT.md  B_HANDOFF_AFTER_STEP_13.md  B_HANDOFF_AFTER_STEP_14.md  B_HANDOFF_AFTER_STEP_16.md  CONTRACTS.md  FILE_ENGINE_CLI.md  FILE_SAFETY_INVARIANTS.md  FILE_TRANSFER_THREAT_MODEL.md  MVP_SCOPE.md  RECOVERY_RUNBOOK.md  SMART_CACHE_PRIVACY_ADR.md  e2e-scenarios.md  manual-vs-delegated-file-work.md  offline-file-cache-plan.md  threat-model.md
docs/adr/: 0001-local-first.md
infra/aws/: backup-postgres.sh  bootstrap-ec2.sh  compose.yaml  restore-postgres-drill.sh
scripts/: backup-postgres.ps1  check-openapi-coverage.mjs  check-production-endpoint.ps1  mousekeeper-release-e2e-preflight.ps1  restore-postgres.ps1
tools/desktop-agent-simulator/: package.json  tsconfig.json
tools/file-engine-cli/: Cargo.toml  README.md
tools/file-engine-cli/scripts/: e2e-fixture.ps1
tools/file-engine-cli/src/: analyzer.rs  auto_approval.rs  browse.rs  db.rs  decision.rs  execute.rs  file_identity.rs  file_index.rs  file_ops.rs  fs_safety.rs  journal.rs  lib.rs  main.rs  path_guard.rs  precondition.rs  proposal.rs  trash.rs  undo.rs
tools/file-engine-cli/src/rules/: definition.rs  extension.rs  glob.rs  mod.rs
tools/file-engine-cli/tests/: cli_flow.rs
(+243 files in other folders)
