[package]
name = "housemouse-desktop"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
tauri-commands = ["dep:tauri"]

[dependencies]
file-engine-cli = { path = "../../../tools/file-engine-cli" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", optional = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
