[package]
name = "housemouse-desktop"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
tauri-commands = ["dep:tauri", "dep:tauri-plugin-autostart", "dep:tauri-plugin-dialog"]

[dependencies]
file-engine-cli = { path = "../../../tools/file-engine-cli" }
keyring = "4.1.4"
notify = "8.2.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "sqlite-bundled"] }
tauri = { version = "2", optional = true, features = ["tray-icon"] }
tauri-plugin-autostart = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
