[package]
name = "mousekeeper-desktop"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
tauri-commands = ["dep:tauri", "dep:tauri-plugin-autostart", "dep:tauri-plugin-dialog", "tauri/tray-icon", "dep:rust_socketio", "dep:futures-util"]

[dependencies]
file-engine-cli = { path = "../../../tools/file-engine-cli" }
futures-util = { version = "0.3", optional = true }
keyring = "4.1.4"
notify = "8.2.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "rustls", "stream"] }
rust_socketio = { version = "0.6.0", features = ["async"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "sqlite-bundled"] }
tauri = { version = "2", optional = true, features = ["tray-icon"] }
tauri-plugin-autostart = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
